# ai-in-the-sdlc

./: .env.example  .gitignore  CLAUDE.md  README.md  TESSL.md  index.html  main.js  package-lock.json  package.json  preload.js  tailwind.config.js  tessl-config.jsonc
.github/workflows/: build-electron.yml
agent-cli/: .gitignore  README.md  pyproject.toml  requirements.txt  theorizer-cleanup-plan.json
agent-cli/docs/: commands.md  complete-rewrite-workflow.md  fixed-issues.md  known-issues.md  plan-based-rewrite-flows.md  user-flows.md
agent-cli/src/git_history_rewriter/: __init__.py  claude_agent.py  cli.py  conversation_loader.py  plan_schema.py  prompt_builder.py  workflow.py
agent-cli/src/git_history_rewriter/git/: __init__.py  operations.py
agent-cli/tests/: test_git_operations.py
electron-app/: .gitignore  main.js  package-lock.json  package.json  vite.config.mjs
electron-app/src/: App.tsx
electron-app2/: Git Watcher Desktop App - Project Summary.md  Git Watcher Desktop App.md  index.html  main.js  package-app.js  package-lock.json  package.json  preload.js  renderer.js  test-logic.js  todo.md  txt.txt  watch_file.py
file_watch/: claude_changes_log.txt  manus.py
git-service/: .gitignore  README.md  README_AUTH.md  app.py  enhanced_classifier.py  example_client.py  example_investigation_client.py  fix_auth_settings.py  hunk_splitter.py  init_db.py  requirements.txt  show_all_commits.py  test_auth.py  test_db_connection.py
git-service/repository/: mongo_client.py
git-service/src/: .env.example  commit_execute.py  example_usage.py  git_examine.py  (+3 more)
local-client/: .dockerignore  .env.example  companion.py  requirements.txt
proxy/: main.py  requirements.txt
src/: App.tsx  index.css
(+47 files in other folders)
